examples/error-codes/unspecified/USP-CERL7-bad.output
Error: USP-CERL7
Description: Comparison of unspecified value.
Type: Unspecified value or behavior.
See also: C11 sec. 6.5.9
  at main(USP-CERL7-bad.c:9)
